# dual-esp32-cam-sync-websrv

./: partitions.csv  test_seqcap_svga.sh
bash/: seqcapmaster.sh
main/: CMakeLists.txt  camera.c  config.h  httpd.c  httpd.h  idf_component.yml  main.c  sd_bench.c  sd_bench.h  sdcard.c  sdcard.h  sdcard_utils.c  sdcard_utils.h  seqcap.c  seqcap.h  vbytes.c
storage/: config.cfg
